# LocalBox

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PSScriptAnalyzerSettings.psd1  README.md  SECURITY.md  install.ps1
.claude/: plan-template-overrides.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  pester.yml
crates/localbox/: Cargo.toml
crates/localbox-launcher/: Cargo.toml
crates/localbox-launcher/src/: catalog.rs  env.rs  launcher.rs  lib.rs  localpilot_config.rs  orchestrate.rs  permissions.rs  posture.rs  proxy.rs  smoke.rs
crates/localbox-launcher/tests/: launcher_envelope.rs
crates/localbox-launcher/tests/fixtures/: launcher-envelope.json
crates/localbox-tui/: Cargo.toml
crates/localbox-tui/src/: customize.rs  driver.rs  lib.rs  plan.rs  ui.rs  vocab.rs
crates/localbox/src/: embed.rs  exec.rs  fetch.rs  guided.rs  lib.rs  live.rs  main.rs  manage.rs  migrate.rs  update.rs
docs/: README.md  architecture.md  auto-tuner.md  autobest-profile.md  harness-mode.md  install.md  llamacpp-modes.md  mcp.md  model-management.md  settings.md  troubleshooting.md  usage.md  versioning.md  wizard-and-tui.md
docs/wiki/: Examples.md  Getting-Started.md  Home.md  How-To.md  Reference.md  Troubleshooting.md  _Sidebar.md
docs/wiki/Examples/: Overview.md
docs/wiki/How-To/: Overview.md
local-llm/: LocalLLMProfile.ps1  defaults.json  llm-models.example.json  llm-models.json
local-llm/lib/: 00-settings.ps1  05-validate.ps1  10-helpers.ps1  15-updates.ps1  20-models.ps1  25-vram.ps1  32-llamacpp.ps1  33-llamacpp-install.ps1  34-llamacpp-status.ps1  35-backend.ps1  36-llamacpp-update.ps1  41-llamacpp-args.ps1  42-llamacpp-templates.ps1  55-huggingface.ps1  60-catalog.ps1  65-claude-launch.ps1  70-bench.ps1  71-benchpilot-bridge.ps1  71-localbench-bridge.ps1  72-llamacpp-tuner.ps1  75-display.ps1  80-init.ps1  85-shortcuts.ps1  86-embed-serve.ps1  90-wizard.ps1  91-launch-board.ps1  92-launch-board-loop.ps1  93-launch-guided.ps1  95-tui-api.ps1  99-entrypoints.ps1
localbox-proxy/: no-think-proxy.py
ollama-proxy/: no-think-proxy.py
tasks/: README.md
tests/: smoke-autobest-compat.ps1  smoke-tui-api.ps1  smoke-verified-download.ps1  test_no_think_proxy.py
tests/fixtures/autobest/: best-q3635ba3b.json
tests/unit/: config-merge.tests.ps1  constrained-decoding.tests.ps1  download-pins.tests.ps1  embed-serve.tests.ps1  headless-serve.tests.ps1  launch-board-loop.tests.ps1  launch-board.tests.ps1  launch-guided.tests.ps1  local-env.tests.ps1  localbox-vision.tests.ps1  localpilot-discovery.tests.ps1  localpilot-launch.tests.ps1  no-think-proxy-repoint.tests.ps1  permission-args.tests.ps1  serve-guard.tests.ps1
tui/: publish-tui.ps1
tui/LocalBox.Tui/: LocalBox.Tui.csproj  Program.cs
