[package]
name = "localbox-launcher"
version = "2.3.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "LocalBox's launcher-contract implementation: catalog-backed model resolution, llama.cpp binary resolution, and server lifecycle over the shared localx-llama crate tier."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sysinfo = { workspace = true }
toml_edit = { workspace = true }
localx-llama-core = { workspace = true }
localx-llama-runtime = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
toml = { workspace = true }
