[package]
name = "localbox-tui"
version = "2.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "The friendly LocalBox launcher UI: plain-language vocabulary, the guided launch plan, and backend-agnostic ratatui widgets for non-developers."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
localx-llama-core = { workspace = true }
ratatui = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
